tests/e2e/reverse-proxy/00-create-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-reverse-proxy
spec:
  finalizers:
  - kubernetes
