tests/e2e/reverse-proxy/01-create-resources.yaml
---
apiVersion: cloud.redhat.com/v1alpha1
kind: FrontendEnvironment
metadata:
  name: test-reverse-proxy-environment
  namespace: test-reverse-proxy
spec:
  generateNavJSON: false
  ssl: false
  hostname: reverse-proxy-test.example.com
  reverseProxyHostname: reverse-proxy.cluster.local
  sso: https://sso.foo.redhat.com
  enablePushCache: true
  reverseProxyImage: quay.io/redhatinsights/frontend-asset-proxy:latest
  reverseProxySPAEntrypointPath: /index.html
  reverseProxyLogLevel: INFO
---
apiVersion: cloud.redhat.com/v1alpha1
kind: Frontend
metadata:
  name: test-frontend-with-proxy
  namespace: test-reverse-proxy
spec:
  deploymentRepo: https://github.com/RedHatInsights/insights-chrome
  frontend:
    paths:
      - /apps/test-proxy
  envName: test-reverse-proxy-environment
  image: quay.io/cloudservices/insights-chrome-frontend:latest
  title: Test Frontend with Reverse Proxy
  feoConfigEnabled: true
