tests/e2e/reverse-proxy/03-enable-ssl.yaml
---
# Test SSL configuration by updating the FrontendEnvironment
apiVersion: cloud.redhat.com/v1alpha1
kind: FrontendEnvironment
metadata:
  name: test-reverse-proxy
spec:
  generateNavJSON: false
  ssl: true  # Enable SSL
  hostname: reverse-proxy-test.example.com
  namespace: test-reverse-proxy
  sso: https://sso.foo.redhat.com
  enablePushCache: true
  reverseProxyHostname: reverse-proxy.cluster.local
  reverseProxyImage: quay.io/redhatinsights/frontend-asset-proxy:latest
  reverseProxySPAEntrypointPath: /index.html
  reverseProxyLogLevel: INFO
